--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,43 @@
-@import url('./reset.css');
+@import url("./reset.css");
+
+* {
+}
+header {
+  border-bottom: 1px solid rgba(224, 224, 224, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  font-family: "Caveat", cursive;
+  background-color: white;
+}
+
+.logo {
+  width: 1000px;
+  height: 100px;
+  font-size: 50px;
+
+  display: flex;
+  align-items: center;
+  color: #bf917e;
+  margin-left: 100px;
+}
+
+span {
+  color: #bf917e;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+.container {
+}
 
 .form_wrap {
-  margin: 50px 0;
+  margin: 10px 0;
   max-width: 1400px;
+  position: relative;
+  left: 120px;
 }
 .form_wrap form {
   width: 500px;
@@ -26,13 +61,24 @@
   gap: 50px;
 }
 .recipe_list_wrap li {
+  position: relative;
   cursor: pointer;
+  overflow: hidden;
 }
 .recipe_list_wrap li img {
   width: 100%;
-  aspect-ratio: 1;
+  aspect-ratio: 0.8/1;
   border-radius: 10px;
+  margin-top: 50px;
 }
 .recipe_list_wrap li p {
+  position: relative;
   text-align: center;
+  bottom: 41px;
+  font-family: "Noto Sans KR", sans-serif;
+  color: white;
+  background-color: rgba(147, 112, 98, 0.9);
+  height: 40px;
+  line-height: 41px;
+  border-radius: 0 0 10px 10px;
 }
