--- a/css/sub.css
+++ b/css/sub.css
@@ -32,12 +32,12 @@
 .rcp_pat {
   font-size: 20px;
   padding-bottom: 30px;
-  border-bottom: 1px solid #ccc;
+  /* border-bottom: 1px solid #ccc; */
 }
 .rcp_dtls_info_wrap {
   padding: 30px 0;
   display: flex;
-  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc;
 }
 .rcp_dtls_info_wrap .rcp_dtls_wrap {
   flex: 1;
@@ -63,7 +63,7 @@
 }
 .menual_wrap {
   padding: 30px 0;
-  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc;
 }
 .menual_wrap .menual_list {
 
