--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@ header {
   justify-content: space-between;
   font-family: "Caveat", cursive;
   background-color: white;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 .logo {
@@ -52,8 +57,138 @@ span {
 .form_wrap form button .search_btn {
   flex: 1;
 }
+.recipe_recommand_title {
+  padding: 150px 10px 0 10px;
+  font-size: 20px;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+}
+.recipe_recommand_title::before {
+  content: "|     ";
+}
+.recipe_recommand_title::after {
+  content: "|";
+}
+
+.recipe_recommand {
+  padding: 50px 30px;
+  margin: 0 auto;
+  max-width: 1400px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+}
+.rcp_recommand_img {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+.rcp_recommand_img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px 0 0 0;
+}
+
+.rcp_recommand_img p {
+  position: relative;
+  text-align: center;
+  bottom: 41px;
+  font-family: "Noto Sans KR", sans-serif;
+  color: white;
+  background-color: #2a2a2a;
+  height: 40px;
+  line-height: 41px;
+}
+
+.rcp_recommand_img2 img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0 10px 0 0;
+}
+.rcp_recommand_img2 p {
+  position: relative;
+  text-align: center;
+  bottom: 41px;
+  font-family: "Noto Sans KR", sans-serif;
+  color: white;
+  background-color: rgba(147, 112, 98, 0.9);
+  height: 40px;
+  line-height: 41px;
+  border-radius: 0 10px 0 0;
+}
+.rcp_recommand_img3 img {
+  width: 100%;
+  height: 100%;
+}
+.rcp_recommand_img3 p {
+  position: relative;
+  text-align: center;
+  bottom: 41px;
+  font-family: "Noto Sans KR", sans-serif;
+  color: white;
+  background-color: rgba(147, 112, 98, 0.9);
+  height: 40px;
+  line-height: 41px;
+}
+.rcp_recommand_img4 img {
+  width: 100%;
+  border-radius: 0 0 0 10px;
+}
+.rcp_recommand_img4 p {
+  position: relative;
+  text-align: center;
+  bottom: 41px;
+  font-family: "Noto Sans KR", sans-serif;
+  color: white;
+  background-color: rgba(147, 112, 98, 0.9);
+  height: 40px;
+  line-height: 41px;
+  border-radius: 0 0 0 10px;
+}
+.rcp_recommand_img5 img {
+  width: 100%;
+}
+.rcp_recommand_img5 p {
+  position: relative;
+  text-align: center;
+  bottom: 41px;
+  font-family: "Noto Sans KR", sans-serif;
+  color: white;
+  background-color: rgba(147, 112, 98, 0.9);
+  height: 40px;
+  line-height: 41px;
+}
+.rcp_recommand_img6 img {
+  width: 100%;
+  border-radius: 0 0 10px 0;
+}
+.rcp_recommand_img6 p {
+  position: relative;
+  text-align: center;
+  bottom: 41px;
+  font-family: "Noto Sans KR", sans-serif;
+  color: white;
+  background-color: rgba(147, 112, 98, 0.9);
+  height: 40px;
+  line-height: 41px;
+  border-radius: 0 0 10px 0;
+}
+.recipe_title {
+  padding: 150px 10px 0 10px;
+  font-size: 20px;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+}
+.recipe_title::before {
+  content: "| ";
+}
+.recipe_title::after {
+  content: "|";
+}
+
 .recipe_list_wrap {
-  padding: 0 30px;
+  padding: 50px 30px;
   margin: 0 auto;
   max-width: 1400px;
   display: grid;
@@ -69,7 +204,6 @@ span {
   width: 100%;
   aspect-ratio: 0.8/1;
   border-radius: 10px;
-  margin-top: 50px;
 }
 .recipe_list_wrap li p {
   position: relative;
