--- a/css/main.css
+++ b/css/main.css
@@ -49,18 +49,19 @@ header .form_wrap form input {
 }
 
 .recipe_recommand_title {
-  padding: 150px 10px 0 10px;
+  padding: 50px 20px 0;
   font-size: 20px;
   font-weight: 700;
-  display: flex;
-  justify-content: center;
+  /* display: flex; */
+  text-align: center;
 }
 .recipe_recommand_title::before {
-  content: "| ";
+  content: "|";
 }
 .recipe_recommand_title::after {
   content: "|";
 }
+
 .recipe_recommand {
   padding: 50px 30px;
   margin: 0 auto;
