--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,23 @@
 @import url("./reset.css");
 
+.section_wrap {
+  padding: 50px 30px;
+}
+.section_tit {
+  position: relative;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 30px;
+  background-color: #fff;
+}
+.section_tit::before {
+  content: "|";
+}
+.section_tit::after {
+  content: "|";
+}
+
 .container {
   max-width: 1100px;
   margin: 0 auto;
@@ -48,41 +66,24 @@ header .form_wrap form input {
   max-width: 300px;
 }
 
-.rcp_recommand_wrap {
-  padding: 50px 30px;
-}
-.rcp_recommand_wrap .rcp_recommand_tit {
-  position: relative;
-  font-size: 20px;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 30px;
-  background-color: #fff;
-}
-.rcp_recommand_wrap .rcp_recommand_tit::before {
-  content: "|";
-}
-.rcp_recommand_wrap .rcp_recommand_tit::after {
-  content: "|";
-}
 
-.rcp_recommand_wrap .rcp_recommand_list_wrap {
+.rcp_recommand_list_wrap {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
 }
-.rcp_recommand_wrap .rcp_recommand_list_wrap li {
+.rcp_recommand_list_wrap li {
 
 }
-.rcp_recommand_wrap .rcp_recommand_list_wrap li:first-child {
+.rcp_recommand_list_wrap li:first-child {
   grid-column: 1/3;
   grid-row: 1/3;
 }
-.rcp_recommand_wrap .rcp_recommand_list_wrap li img {
+.rcp_recommand_list_wrap li img {
   width: 100%;
   height: 100%;
 }
-.rcp_recommand_wrap .rcp_recommand_list_wrap li p {
+.rcp_recommand_list_wrap li p {
   position: relative;
   text-align: center;
   bottom: 41px;
@@ -92,39 +93,13 @@ header .form_wrap form input {
   height: 40px;
   line-height: 41px;
 }
-.rcp_recommand_wrap .rcp_recommand_list_wrap li:first-child p {
+.rcp_recommand_list_wrap li:first-child p {
   background-color: #2a2a2a;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-.rcp_wrap .rcp_tit {
-  padding: 150px 10px 0 10px;
-  font-size: 20px;
-  font-weight: 700;
-  display: flex;
-  justify-content: center;
-}
-.rcp_wrap .rcp_tit::before {
-  content: "|";
-}
-.rcp_wrap .rcp_tit::after {
-  content: "|";
-}
-
 .rcp_list_wrap {
-  padding: 50px 30px;
   margin: 0 auto;
-  max-width: 1400px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 50px;
