--- a/css/main.css
+++ b/css/main.css
@@ -71,9 +71,12 @@ header .form_wrap form input {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 .rcp_recommand_list_wrap li {
-
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
 }
 .rcp_recommand_list_wrap li:first-child {
   grid-column: 1/3;
@@ -84,14 +87,24 @@ header .form_wrap form input {
   height: 100%;
 }
 .rcp_recommand_list_wrap li p {
-  position: relative;
+  /* position: relative;
   text-align: center;
   bottom: 41px;
   font-family: "Noto Sans KR", sans-serif;
   color: white;
   background-color: rgba(147, 112, 98, 0.9);
   height: 40px;
-  line-height: 41px;
+  line-height: 41px; */
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(147, 112, 98, 0.9);
+  color: white;
+  font-family: "Noto Sans KR", sans-serif;
 }
 .rcp_recommand_list_wrap li:first-child p {
   background-color: #2a2a2a;
@@ -106,20 +119,23 @@ header .form_wrap form input {
 }
 .rcp_list_wrap li {
   cursor: pointer;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
 }
 .rcp_list_wrap li img {
   width: 100%;
   aspect-ratio: 1;
-  border-radius: 10px;
 }
 .rcp_list_wrap li p {
-  position: relative;
-  text-align: center;
-  bottom: 41px;
-  font-family: "Noto Sans KR", sans-serif;
-  color: white;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgba(147, 112, 98, 0.9);
-  height: 40px;
-  line-height: 41px;
-  border-radius: 0 0 10px 10px;
+  color: white;
+  font-family: "Noto Sans KR", sans-serif;
 }
