--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ header .form_wrap form input {
   position: relative;
   border-radius: 10px;
   overflow: hidden;
+  cursor: pointer;
 }
 .rcp_recommand_list_wrap li:first-child {
   grid-column: 1/3;
