--- a/css/main.css
+++ b/css/main.css
@@ -78,10 +78,12 @@ header form button {
 .recipe_recommand {
   padding: 50px 30px;
   margin: 0 auto;
-  max-width: 1400px;
+  max-width: 750px;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 250px);
+  grid-template-columns: repeat(3, 250px);
+  grid-row-gap: 1px;
+  grid-column-gap: 1px;
 }
 .rcp_recommand_img {
   grid-column: 1/3;
@@ -115,7 +117,7 @@ header form button {
   bottom: 41px;
   font-family: "Noto Sans KR", sans-serif;
   color: white;
-  background-color: rgba(147, 112, 98, 0.9);
+  background-color: #2a2a2a;
   height: 40px;
   line-height: 41px;
   border-radius: 0 10px 0 0;
@@ -130,7 +132,7 @@ header form button {
   bottom: 41px;
   font-family: "Noto Sans KR", sans-serif;
   color: white;
-  background-color: rgba(147, 112, 98, 0.9);
+  background-color: #2a2a2a;
   height: 40px;
   line-height: 41px;
 }
@@ -144,7 +146,7 @@ header form button {
   bottom: 41px;
   font-family: "Noto Sans KR", sans-serif;
   color: white;
-  background-color: rgba(147, 112, 98, 0.9);
+  background-color: #2a2a2a;
   height: 40px;
   line-height: 41px;
   border-radius: 0 0 0 10px;
@@ -158,7 +160,7 @@ header form button {
   bottom: 41px;
   font-family: "Noto Sans KR", sans-serif;
   color: white;
-  background-color: rgba(147, 112, 98, 0.9);
+  background-color: #2a2a2a;
   height: 40px;
   line-height: 41px;
 }
@@ -172,7 +174,7 @@ header form button {
   bottom: 41px;
   font-family: "Noto Sans KR", sans-serif;
   color: white;
-  background-color: rgba(147, 112, 98, 0.9);
+  background-color: #2a2a2a;
   height: 40px;
   line-height: 41px;
   border-radius: 0 0 10px 0;
