--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,12 @@
 @import url("./reset.css");
 
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
 .section_wrap {
-  padding: 50px 30px;
+  padding: 50px 0;
 }
 .section_tit {
   position: relative;
@@ -18,28 +23,29 @@
   content: "|";
 }
 
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-}
 header {
   border-bottom: 1px solid rgba(224, 224, 224, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-family: "Caveat", cursive;
   background-color: white;
   position: sticky;
   top: 0;
   height: 100px;
   z-index: 99;
 }
+header .container {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
 header .logo {
   white-space: nowrap;
   font-size: 50px;
   align-items: center;
-  color: #bf917e;
   margin-right: 30px;
+}
+header .logo a {
+  color: #bf917e;
+  font-family: "Caveat", cursive;
 }
 header .form_wrap {
   display: flex;
@@ -66,7 +72,6 @@ header .form_wrap form input {
   max-width: 300px;
 }
 
-
 .rcp_recommand_list_wrap {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
@@ -88,14 +93,6 @@ header .form_wrap form input {
   height: 100%;
 }
 .rcp_recommand_list_wrap li p {
-  /* position: relative;
-  text-align: center;
-  bottom: 41px;
-  font-family: "Noto Sans KR", sans-serif;
-  color: white;
-  background-color: rgba(147, 112, 98, 0.9);
-  height: 40px;
-  line-height: 41px; */
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -110,8 +107,6 @@ header .form_wrap form input {
 .rcp_recommand_list_wrap li:first-child p {
   background-color: #2a2a2a;
 }
-
-
 .rcp_list_wrap {
   margin: 0 auto;
   display: grid;
